Fix genre suggestions z-index

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@
     position: relative;
     cursor: default;
     user-select: none;
+    z-index: 10;
 }
 .suggestions ul {
     position: absolute;
